# socialposter

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  TECHNICAL_DOC.md  capacitor.config.json  cookies.txt  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/CapApp-SPM/: Package.swift
scripts/: generate_icons.py
src/socialposter/: __init__.py  __main__.py  cli.py
src/socialposter/core/: ai_service.py  automation_engine.py  competitor_service.py  content.py  media.py  publisher.py  scheduler.py  webhook_dispatcher.py
src/socialposter/utils/: crypto.py  datetime.py  logger.py  pagination.py  publishing.py  retry.py  team.py
src/socialposter/web/: admin.py  ai_routes.py  analytics_routes.py  app.py  auth.py  automation_routes.py  calendar_routes.py  competitor_routes.py  draft_routes.py  inbox_routes.py  media_routes.py  models.py  oauth_routes.py  permissions.py  schedule_routes.py  team_routes.py  token_auth.py  user_ai_routes.py  webhook_routes.py
src/socialposter/web/static/: manifest.json  sw.js
src/socialposter/web/templates/: admin.html  analytics.html  automation.html  base.html  (+13 more)
templates/: sample_post.yaml
tests/: conftest.py  test_cli.py  test_competitors.py  test_content.py  test_password_storage.py  test_publisher.py  test_security.py  test_user_ai.py  test_web_fixes.py  test_webhooks.py
(+13 files in other folders)
